fix: overflow for shop

--- a/wp-content/themes/mebli/assets/scss/_about-store.scss
+++ b/wp-content/themes/mebli/assets/scss/_about-store.scss
@@ -9,6 +9,7 @@
 .shop {
   position:      relative;
   margin-bottom: 5%;
+  overflow:      hidden;
   &:after, &:before {
     position: absolute;
   }
